--- a/blood _bank.ava.html
+++ b/blood _bank.ava.html
@@ -26,23 +26,25 @@
 <body>
 	<div class="container">
 		<nav class="flex">
-		  <a href="index.html"><img id="logoimg" src="Images/Img/Illustrated Blood Donor Hospital Logo.png" alt="logo"></a>
-		  <div class="logo"> Red Blood</div>
-		  <ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="index.html#about-us">About US</a></li>
-			<li>
-			  <a href="#"
-				>Looking For Blood
+			<a href="index.html"><img id="logoimg" src="Images/Img/Illustrated Blood Donor Hospital Logo.png" alt="logo"></a>
+			<div class="logo"> Red Blood</div>
+			<ul>
+			  <li><a href="index.html">Home</a></li>
+			  <li>
+				<a class="scroll" href="#about-us">About Us</a>
+			  </li>
+			  <li>
+				<a href="blood _bank.ava.html">Blood Availability
+				  <i class="fas fa-caret-down"></i>
+				</a>
+				
+			  </li>
+			  <li>
+				<a href="bloodbank_register.html"
+				>Add your BloodBank
 				<i class="fas fa-caret-down"></i>
 			  </a>
-			  <ul>
-				<li><a href="blood _bank.ava.html">Blood Availability</a></li>
-				<li><a href="#">Blood Bank Directory</a></li>
-			  </ul>
 			</li>
-  
-			<li></li>
 			<li>
 			  <a href="#"
 				>Want to Donate Blood
@@ -51,22 +53,12 @@
 				  <li><a href="donation_camp.html">Blood Donation Camp</a></li>
 				  <li><a href="Register.html">Donor Login</a></li>
 				  <li><a href="camp_registration.html">Register for VBD Camp</a></li>
-				  <li><a href="#">About Blood Donation</a></li>
+				  <!-- <li><a href="About_Blood_Donation.html">About Blood Donation</a></li> -->
 				</ul>
 			  </a>
 			</li>
-			<li>
-			  <a href="#"
-				>Blood Bank Login
-				<i class="fas fa-caret-down"></i>
-				<ul>
-				  <li><a href="#">Admin Login</a></li>
-				  <li><a href="#">Add your Blood Bank</a></li>
-				</ul>
-			  </a>
-			</li>
-		  </ul>
-	  </nav>
+			</ul>
+		</nav>
 	  <div class="container1 wrapper">
 		<div class="page-header">
 		  <h3 class="text-danger">Blood Stock Availability</h3>
