--- a/index.html
+++ b/index.html
@@ -150,39 +150,29 @@ main {
             <a class="scroll" href="#about-us">About Us</a>
           </li>
           <li>
-            <a href="#"
-              >Looking For Blood
+            <a href="blood _bank.ava.html">Blood Availability
               <i class="fas fa-caret-down"></i>
             </a>
+            
+          </li>
+          <li>
+            <a href="bloodbank_register.html"
+            >Add your BloodBank
+            <i class="fas fa-caret-down"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#"
+            >Want to Donate Blood
+            <i class="fas fa-caret-down"></i>
             <ul>
-              <li><a href="blood _bank.ava.html">Blood Availability</a></li>
-              <li><a href="#">Blood Bank Directory</a></li>
+              <li><a href="donation_camp.html">Blood Donation Camp</a></li>
+              <li><a href="Register.html">Donor Login</a></li>
+              <li><a href="camp_registration.html">Register for VBD Camp</a></li>
+              <!-- <li><a href="About_Blood_Donation.html">About Blood Donation</a></li> -->
             </ul>
-          </li>
-
-          <li></li>
-          <li>
-            <a href="#"
-              >Want to Donate Blood
-              <i class="fas fa-caret-down"></i>
-              <ul>
-                <li><a href="donation_camp.html">Blood Donation Camp</a></li>
-                <li><a href="Register.html">Donor Login</a></li>
-                <li><a href="camp_registration.html">Register for VBD Camp</a></li>
-                <li><a href="#">About Blood Donation</a></li>
-              </ul>
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              >Blood Bank Login
-              <i class="fas fa-caret-down"></i>
-              <ul>
-                <li><a href="#">Admin Login</a></li>
-                <li><a href="#">Add your Blood Bank</a></li>
-              </ul>
-            </a>
-          </li>
+          </a>
+        </li>
         </ul>
     </nav>
     <div class="text-box">
